fixed dark mode for modal

--- a/src/Components/Ideamodal/Ideamodal.css
+++ b/src/Components/Ideamodal/Ideamodal.css
@@ -42,20 +42,30 @@
 }
 .gap-display{
     display: flex;
+    align-items: center;
     gap: 0.5rem;
     margin-top: 0.5rem;
-    margin-bottom: -0.5rem;
 }
+
+.modal-desc {
+    text-overflow: scroll;
+}
+
+.button-actions {
+    margin-left: 1rem
+}
+
 .comment-list{
-    max-height: 8rem;
+    height: 11rem;
     margin-top: 0.5rem;
-    overflow-y: scroll;
+    overflow-y: auto;
     width: 100%;
 }
 .date-section{
     border-radius: 0.5rem;
     padding: 0.2rem 0.5rem;
     width: fit-content;
+    font-size: 1.1rem;
     background-color: lightgray;
 }
 .input-border{
@@ -109,6 +119,6 @@
 
 @media only screen and (max-width: 700px) {
     .idea-intro{
-        max-width: 24ch;
+        width: 24ch;
     }
-  }
+}
